<resources>
    <string name="app_name">TodoList</string>
    <string name="enter_note">Enter note:</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="save">Save</string>
    <string name="text_empty">Text is empty</string>
    <string name="todo">TODO</string>
    <string name="todolist">ToDoList</string>
    <string name="note_is_added">Note has been added.</string>
</resources>